# syntia-term

./: LICENSE  README.md  prompt.txt  pyproject.toml  test.md
.github/workflows/: publish-pre-release.yml  publish-release.yml
syntia/: app.py  run.py
syntia/components/: __init__.py  custom_terminal.py  horizontal_splitter.py  tabbed_right_panel.py  tabbed_text_area.py  terminal.py  vertical_splitter.py
syntia_term/: app.py  run.py
syntia_term/components/: __init__.py  horizontal_splitter.py  tabbed_right_panel.py  terminal.py  vertical_splitter.py
